--- a/_posts/2018-05-28-gardens.md
+++ b/_posts/2018-05-28-gardens.md
@@ -9,7 +9,7 @@ comments: true
 
 I made spring rolls for dinner with vegetables I got from the market (some of them, at least) and it reminded me of how much I love urban agriculture. It also reminded me of how much I love spring rolls on a nice spring day. I volunteered for a while at an urban farm last summer and it still amazes me that we were able to grow so much fresh food in such a small space. As someone who has always lived in an \[sub\]urban place, I feel very removed from my food when I go to the grocery store.
 
-A few weeks ago I was talking to a friend about how much urban farming and gardening there was in Washington, DC. Apart from DC, the other half of my life is spent in Saint Paul, MN where there is also quite a bit of urban agriculture. We decided to look online to see what sorts of numbers we could find about urban farming in DC and I thought it would be worthwhile to map! I was interested to see what parts of the city have the largest farm areas. My expectation is that Shaw/Howard and SW Waterfront areas both have a lot of farm area because those are the neighborhoods I hear about most.
+A few weeks ago I was talking to a friend about how much urban farming and gardening there was in Washington, DC. Apart from DC, the other half of my life is spent in Saint Paul, MN where there is also quite a bit of urban agriculture. We decided to look online to see what sorts of numbers we could find about urban farming in DC and I thought it would be worthwhile to map! I was interested to see what parts of the city have the largest farm areas. My expectation is that Shaw/Howard and SW Waterfront areas both have a lot of farms because those are the neighborhoods I hear about most.
 
 Libraries and Data Gathering
 ----------------------------
@@ -231,7 +231,7 @@ While the urban farms were more concentrated in the NE and SE quadrants of DC, i
 Concluding thoughts
 -------------------
 
-In the future I'd love to expand the maps to include features like green roofs, instead of just urban farms and gardens. In reality, sustainability and food encompass a lot more than just what I've already mapped. I'd also like to include some other variables like park land and zoning codes to explain why some of the patterns in placement exist.
+In the future I'd love to expand the maps to include features like green roofs, instead of just urban farms and gardens. In reality, sustainability and food encompass a lot more than just what I've already mapped. I'd also like to include some other variables like park land and zoning codes to explain why some of the patterns in placement exist. As for my guess that SW Waterfront would have more farms, I now expect that it would have more alternatives like green roofs. 
 
 Creating these maps also helped me practice more of the `{sf}` functions and making/designing maps with `{ggplot2}`. I've been working through [Geocomputation with R](https://geocompr.robinlovelace.net/) so it was great to put some of that to use! One of my goals for this upcoming year is to learn more about the design aspects of data visualization, so I spent far more time than I usually would have on color and font selection :)
 
