--- a/_posts/2020-12-07-30-day-maps.md
+++ b/_posts/2020-12-07-30-day-maps.md
@@ -12,7 +12,7 @@ during November has a different prompt and then cartographers across the
 world can post maps to fit each of those themes. I got a few questions
 about how I approach map design– particularly when designing things
 quickly. I wanted to talk through my process in depth for one of the
-maps that I made, [Okay, but, what is a suburb?]().
+maps that I made, [Okay, but, what is a suburb?](https://github.com/katiejolly/30-day-maps-2020/tree/main/20-population).
 
 ![map showing urban, suburban, and rural areas in Virginia. Highlights
 the DC, Richmond, and Roanoke metro
@@ -20,7 +20,7 @@ areas.](https://raw.githubusercontent.com/katiejolly/30-day-maps-2020/main/20-po
 
 # Brainstorming
 
-This map was designing for the “population” theme. I had designing a few
+This map was designed for the “population” theme. I had made a few
 maps that were more for aesthetics, but I wanted this one to tell some
 sort of story. One of my goals throughout the challenge was to practice
 using data visualization as a narrative tool. I wanted people to walk
@@ -34,7 +34,7 @@ can take many forms, but the discussion about what is
 urban/suburban/rural is particularly interesting to me. Like many
 residential planning questions this classification highly depends on
 where you’re drawing the boundaries. Are you looking at counties?
-Municipal boundaries? Zip codes? Census tracts?
+Municipalities? Zip codes? Census tracts?
 
 The second idea I had was to look at [IRS county migration
 data](https://www.irs.gov/statistics/soi-tax-stats-migration-data). I
@@ -89,7 +89,7 @@ From Montgomery’s article:
 > were more likely to be called urban. Areas with lots of senior
 > citizens were more frequently called rural.
 
-One fascinating case study is Pheonix, which just within the metro
+One fascinating case study is Phoenix, which just within the metro
 boundaries has a mix of urban, suburban, *and
 rural*.
 
@@ -252,7 +252,7 @@ detail_map <- ggplot() +
 detail_map
 ```
 
-![]({{ site.url }}/assets/30-day-maps/draw_main_map-1.png)
+![](https://raw.githubusercontent.com/katiejolly/blog/master/assets/30-day-maps/draw_main_map-1.png)
 
 ``` r
 # save to the directory with specific dimensions
@@ -389,7 +389,7 @@ they wouldn’t have otherwise seen/learned from your map. I used my
 annotation space to describe the radial pattern around a metro area
 (even though people could see this on their own, it’s a main point of
 the map and worth reiterating to help guide people on how to read it)
-and give some summary statistics about households.
+and give some summary statistics and commentary about households.
 
 # Pulling it all together
 
